--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-hot-loader": "^3.0.0-beta.6",
+	"react-native": "^0.56.0",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
+	"rnpm": "^1.9.0",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
