--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
     "react": "16.0.0",
-    "react-dom": "^15.6.1",
+    "react-dom": "16.0.0",
     "react-hot-loader": "^3.0.0-beta.6",
 	"react-native": "0.51.0",
     "react-router": "^4.1.2",
