--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "16.0.0",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-native": "0.51.0",
-	"react-star-rating-component": "^1.3.0",
+    "react-select": "1.1.0",
+    "react-star-rating-component": "^1.3.0",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
     "rnpm": "^1.9.0",
