--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "express": "^4.15.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^2.30.1",
+    "moment": "2.x",
     "mongoose": "^4.11.7",
     "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
+    "rc-time-picker": "3.2.1",
     "react": "16.0.0",
     "react-dom": "16.0.0",
     "react-hot-loader": "^3.0.0-beta.6",
