--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-star-rating-component": "^1.3.0",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
+    "react-table": "6.7.6",
     "rnpm": "^1.9.0",
     "whatwg-fetch": "^2.0.3"
   },
